force-app/main/default/objects/AAO_People_Question__mdt/AAO_People_Question__mdt.object-meta.xml
<CustomObject>
    <label>AAO People Question</label>
    <pluralLabel>AAO People Questions</pluralLabel>
</CustomObject>