force-app/main/default/objects/AAO_People_Question__mdt/fields/AAO_Org_Override__c.field-meta.xml
<CustomField>
    <fullName>AAO_Org_Override__c</fullName>
    <description>THE ORG&apos;S text, and null until somebody sets it. SubscriberControlled, so an upgrade never touches it and we cannot overwrite what a customer wrote. Null is not a value: the reader prefers this only where it is populated, so an untouched org silently gets the shipped default and a customised org silently gets its own words, with no flag and no migration.</description>
    <label>Org Override</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>