force-app/main/default/objects/AAO_People_Question__mdt/fields/AAO_Provenance__c.field-meta.xml
<CustomField>
    <fullName>AAO_Provenance__c</fullName>
    <label>Provenance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Label</fullName>
                <default>true</default>
                <label>Label</label>
            </value>
            <value>
                <fullName>UI_Capture</fullName>
                <label>UI Capture</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>