force-app/main/default/objects/AAO_People_Question__mdt/fields/AAO_Question_Key__c.field-meta.xml
<CustomField>
    <fullName>AAO_Question_Key__c</fullName>
    <description>The upstream label name this question corresponds to, e.g. AM_OM_SUPPORT_GUIDED_QUESTION_1. IDENTITY, NOT A DEPENDENCY: it is a stable name we keep so the family guard can assert a shape and so anyone comparing our text to Altify&apos;s can find the counterpart. Nothing reads ALTF at runtime and nothing keys on a package version, per LAW #1.</description>
    <label>Question Key</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>