force-app/main/default/objects/AAO_People_Question__mdt/fields/AAO_Sequence__c.field-meta.xml
<CustomField>
    <fullName>AAO_Sequence__c</fullName>
    <description>Display order within a family. Ours, DeveloperControlled. Deliberately NOT the number in the label name, which is sparse and non-sequential upstream; this is a dense order for presentation and never an identity.</description>
    <label>Sequence</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>